--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@
   - text: Alumni
     href: /people/alumni/
 - text: Pricing 
-  href: /courses/
+  href: /pricing/
     #- text: Courses
     #href: /courses/
 - text: News
