--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
   #- text: Research
   #href: /research/
 - text: Team 
-  href: /people/
+  href: /team/
   #  menu:
 #  - text: ALL
 #    href: /people/
