--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # Links listed below will be included in your site's navbar (navigation at the top)
 
-- text: Home # Note that users can also reach the homepage by clicking the site's title on the left in the navbar
+- text: About  # Note that users can also reach the homepage by clicking the site's title on the left in the navbar
   href: /
   #- text: Research
   #href: /research/
