--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,7 +8,7 @@
   email: kangil.kim.01@gmail.com
   #scholar: https://scholar.google.co.kr/citations?user=RZggOtkAAAAJ&hl=ko&oi=ao
 
-- name: Partner
+- name: GIST Intelligence Representation and Reasoning Lab (partner)
   role: AI Core/Application Research 
   image: assets/img/IRR_logo.png
   #homepage: irrlab.github.io
