--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,8 @@
 #    href: /people/bs/
 #  - text: Alumni
 #    href: /people/alumni/
+- text: Service
+  href: http://your-agi.com
 - text: Pricing 
   href: /pricing/
     #- text: Courses
