link_service_your-agi.com

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@
 #  - text: Alumni
 #    href: /people/alumni/
 - text: Service
-  href: http://44.209.135.32
+  href: http://your-agi.com
 - text: Pricing 
   href: /pricing/
     #- text: Courses
